--- a/index.html
+++ b/index.html
@@ -274,8 +274,10 @@
                             мини-бары, чайные станции, фен, телефоны и сейфы есть в каждом номере. А мягкие, невероятно пушистые полотенца, халаты и тапочки никого не оставят равнодушными. В стоимость каждого номера включен невероятно вкусный и красивый завтрак. Блюда из основного меню, приготовленные нашими поварами с любовью и душой, предвосхищают ожидания гостя.
                         </div>
                         <div class="info__media">
-                            <div class="youtube-video">
-                                <iframe width="1805" height="696" src="https://www.youtube.com/embed/K1z9CqvXsTM" title="Aloft Hotel Tour" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                            <div class="video">
+                                <video controls="">
+                                    <source src="https://orel.loft-hotel.pro//video/test.mp4" type="video/mp4">
+                                </video>
                             </div>
                         </div>
                     </div>
